[package]
name = "concentrato-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive", "env"] }
color-eyre = "0.6.2"
console = "0.15.7"
either = "1.8.1"
tokio = { version = "1.29.1", features = ["time", "rt", "macros"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-journald = "0.3.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
testresult = "0.3.0"
